# mcp

./: .pre-commit-config.yaml  .secrets.baseline
awslabs_pipeline/: .gitignore  AUTOMATED_REVIEW_STATUS.md  Dockerfile  FULL_PIPELINE_RESULTS.md  PIPELINE_STATUS.md  ci-improvement-plan.md  pyproject.toml  requirements.uv  test-cloudwan-simple.sh  test-pipeline.sh
awslabs_pipeline/.github/workflows/: claude-review.yml  python.yml
awslabs_pipeline/ci_tool/: __init__.py  code_reviewer.py  core.py  settings.py
awslabs_pipeline/config/: .secrets.template  litellm-config.yaml
awslabs_pipeline/config/act/: .actrc
awslabs_pipeline/scripts/: run-comprehensive-analysis.sh  test-automated-review.sh  test-cloudwan-integration.sh  validate-setup.sh
awslabs_pipeline/src/awslabs_ci_tool/: __init__.py  cli.py
src/cloudwan-mcp-server/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ANFW_INTEGRATION_PLAN.md  CHANGELOG.md  Dockerfile  NOTICE  PR_UPDATE.md  README.md  TEST_RESULTS.md  pyproject.toml  setup.py  uv-requirements.txt
src/cloudwan-mcp-server/.github/workflows/: CLAUDE_PR_REVIEW_GUIDE.md  claude.yml  pre-commit.yml  publish.yml  python.yml
src/cloudwan-mcp-server/awslabs/: __init__.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/: COMPLETE_IAC_ANFW_SUPPORT.md  __init__.py  __main__.py  config_manager.py  consts.py  factory.py  modular_server.py  server.py  server.py.backup
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/anfw/: __init__.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/config/: __init__.py  cache_config.py  tool_config.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/docs/: TROUBLESHOOTING_GUIDE.md  tool-usage.md
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/factory/: __init__.py  tool_factory.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/models/: __init__.py  aws_models.py  network_models.py  response_models.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/monitoring/: metrics.py  service_monitor.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/plugins/: plugin_system.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/registry/: health_check_registry.py  tool_factory.py  tool_registry.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/security/: error_handler.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/server_compat/: __init__.py  server.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/static/: __init__.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/tools/: __init__.py  anfw_management.py  base.py  circuit_breaker_monitor.py  configuration.py  core_network.py  discovery.py  iac_parser_factory.py  network_analysis.py  network_firewall.py  nfg_management.py  transit_gateway.py  unified_iac_api.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/utils/: __init__.py  async_aws_client_factory.py  aws_client_cache.py  aws_client_factory.py  aws_config_manager.py  bgp_analysis.py  circuit_breaker.py  client_pool.py  config.py  connection_optimizer.py  flow_analysis.py  logger.py  memory_manager.py  metrics.py  response_formatter.py  security_risk_analyzer.py  validation.py
src/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/validation/: __init__.py  input_validator.py
src/cloudwan-mcp-server/cloudwan-mcp-server/: ANFW_CORRECTED_POLICY_ANALYSIS.md  ANFW_LIVE_TESTING_RESULTS.md  ANFW_POLICY_ANALYSIS.md  ANFW_TEST_COVERAGE.md  CHANGELOG.md  CI_STATUS.md  Dockerfile  README.md  TERRAFORM_ANFW_PARSING_CAPABILITY.md  run_server.py  simple_test.py  test_cdk_parsing.py  test_cloudformation_parsing.py
src/cloudwan-mcp-server/cloudwan-mcp-server/awslabs/cloudwan_mcp_server/: server.py
src/cloudwan-mcp-server/cloudwan-mcp-server/tests/: README.md  conftest.py  test_anfw_suite.py
src/cloudwan-mcp-server/cloudwan-mcp-server/tests/integration/: test_aws_integration.py  test_aws_labs_compliance.py  test_aws_service_mocking.py  test_cloudwan_api_operations.py  test_comprehensive_fixtures.py  test_comprehensive_server.py  test_concurrent_handling.py  test_direct_tools.py  test_error_simulation.py  test_final_compliance_validation.py  test_global_networks_fix.py  (+19 more)
src/cloudwan-mcp-server/scripts/: license_check.py
src/cloudwan-mcp-server/tests/: README.md  conftest.py  integration_test_endpoints.py  test_aws_config_manager.py  test_constants.py  test_dynamic_endpoints.py  test_error_path_coverage.py  test_exception_handling.py  test_import_validation.py  test_q_developer.py  test_runner.py  test_security_error_handler.py  test_server.py  test_syntax_validation.py
src/cloudwan-mcp-server/tests/fixtures/: advanced_test_fixtures.py
src/cloudwan-mcp-server/tests/integration/: test_aws_integration.py  test_aws_labs_compliance.py  test_aws_service_mocking.py  test_cloudwan_api_operations.py  test_comprehensive_fixtures.py  test_comprehensive_server.py  test_concurrent_handling.py  test_direct_tools.py  test_error_simulation.py  test_final_compliance_validation.py  test_global_networks_fix.py  test_large_topology.py  test_list_core_networks.py  test_live_api.py  test_main_entry_point.py  test_mcp_connection.py  test_mcp_fix.py  test_mcp_protocol.py  test_mcp_response.py  test_mcp_server.py  test_mcp_simple.py  test_mcp_tools.py  test_memory_load.py  test_pagination_rate_limiting.py  test_policy_performance.py  test_security_compliance.py  test_server_performance.py  test_simple_client.py  test_simple_server.py  test_tool_chaining.py  test_tools_validation.py
src/cloudwan-mcp-server/tests/mocking/: __init__.py  aws.py
src/cloudwan-mcp-server/tests/security/: __init__.py  credential_manager.py  test_credential_sanitization.py  test_error_handler.py  test_error_handler_fixes.py
src/cloudwan-mcp-server/tests/unit/: test_aws_config_manager.py  test_aws_helpers.py  test_aws_labs_patterns.py  test_comprehensive_models.py  test_coverage.py  test_discover_ip_details_enhanced.py  test_network_tools.py  test_policy_tools.py  test_server_utils.py  test_tgw_tools.py  test_validation_tools.py
src/cloudwan-mcp-server/tests/utils/: test_helpers.py
(+57 files in other folders)
