[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs.cloudwan-mcp-server"
version = "1.2.0"
description = "AWS CloudWAN MCP Server for network analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "boto3>=1.34.13",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.11.0"
]

[project.scripts]
awslabs-cloudwan-mcp-server = "awslabs.cloudwan_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.pytest.ini_options]
markers = [
    "integration: mark tests as integration tests",
    "slow: mark tests as slow (performance-sensitive)",
    "live: require live AWS credentials",
    "unit: mark tests as unit tests",
    "asyncio: mark tests as async",
    "parametrize: parametrize tests with multiple inputs"
]

testpaths = [
    "tests"
]

addopts = "--cov=awslabs --cov-report=term-missing --asyncio-mode=auto"

[tool.ruff]
line-length = 99
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["F704"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "moto>=5.1.9",
    "networkx>=3.5",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
