[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs-cloudwan-mcp-server"
version = "0.1.0"
description = "AWS CloudWAN MCP server - Advanced network analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest", "moto[ec2]", "ruff", "mypy"]

[project.scripts]
cloudwan-mcp-server = "awslabs.cloudwan_mcp_server:main"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security compliance tests",
    "stress: Performance stress tests",
    "aws_region: Region-specific tests",
    "slow: Slow-running tests",
    "live: Live AWS service tests"
]

[dependency-groups]
dev = [
    "fastmcp>=0.9.1",  # Critical FastMCP integration
    "boto3>=1.28.0",
    "moto[ec2]>=4.0.10",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.5",
    "mypy>=1.1.1",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
]
