[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs-cloudwan-mcp-server"
version = "0.1.0"
description = "AWS CloudWAN MCP server - Advanced network analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Amazon Web Services", email = "aws-labs@amazon.com"},
]
dependencies = [
    "fastmcp>=0.9.1",
    "boto3>=1.34.0",
    "aiobotocore>=2.11.0",
    "botocore>=1.34.0",
    "networkx>=3.0",  # For path analysis
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "circuitbreaker>=2.0.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = ["pytest", "moto[ec2]", "ruff", "mypy"]

[project.scripts]
cloudwan-mcp-server = "awslabs.cloudwan_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "security: Security compliance tests",
    "stress: Performance stress tests",
    "aws_region: Region-specific tests",
    "slow: Slow-running tests",
    "live: Live AWS service tests"
]

[tool.coverage.run]
branch = true
source = ["awslabs/cloudwan_mcp_server"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "coverage_html_report"

[dependency-groups]
dev = [
    "fastmcp>=0.9.1",  # Critical FastMCP integration
    "boto3>=1.28.0",
    "moto[ec2]>=4.0.10",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.5",
    "mypy>=1.1.1",
    "flake8>=6.0.0",  # Added
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
]
